# camt053

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  pyproject.toml
.benchmarks/baseline/: 0001_baseline.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cflite-pr.yml  ci.yml  codeql.yml  docker.yml  docs.yml  release.yml  scorecard.yml
camt053/: __init__.py  __main__.py  audit.py  constants.py  exceptions.py  logging.py  models.py  schema_version.py  services.py  telemetry.py
camt053/api/: __init__.py  app.py  models.py
camt053/cli/: __init__.py  cli.py
camt053/compliance/: __init__.py  cbpr_readiness.py  swift_charset.py
camt053/parse/: __init__.py  dedupe.py  reason_codes.py  report.py  statement_parser.py
camt053/profiles/: __init__.py  _xml.py  base.py  registry.py  v02.py  v08.py  v13.py  v14.py
camt053/reversal/: __init__.py  reversal.py
camt053/schemas/: camt.052.001.14.schema.json  camt.053.001.14.schema.json  camt.054.001.14.schema.json
camt053/security/: __init__.py  path_validator.py  xml_guard.py
camt053/templates/camt.053.001.08/: template.xml
camt053/templates/camt.053.001.14/: statement.xml  template.xml
camt053/templates/pacs.004.001.11/: pacs.004.001.11.xsd  template.xml
camt053/validation/: __init__.py  bic_validator.py  currency_validator.py  iban_validator.py  lei_validator.py  schema_validator.py
camt053/xml/: __init__.py  generate_xml.py  serialize_statement.py  template_env.py  validate_statement.py  validate_via_xsd.py
docs/: api.rst  conf.py  deployment-cookbook.md  index.rst  openssf-best-practices-silver.md  version-matrix.md
docs/dhf/: configuration-management-design-transfer.rst  design-development-plan.rst  design-review-change-control.rst  index.rst  risk-management-file.rst  software-architecture-document.rst  software-requirements-specification.rst  traceability-matrix.rst  verification-validation-plan.rst
docs/posts/: 2026-06-22-shipping-camt053-v006-for-the-november-2026-cliff.md  HACKER-NEWS-SUBMISSION.md
examples/: README.md  audit_hashchain.py  check_cbpr_readiness.py  compute_dedupe_keys.py  parse_statement.py  parse_statement_lenient.py  rest_api_client.py  reverse_ac04.py  services_facade.py  validate_against_profile.py  validate_identifiers.py
fuzz/: fuzz_parser.py
requirements/: audit.in  audit.txt  build.in  docs.in  docs.txt  fuzz.in  fuzz.txt
tests/: conftest.py  test_api.py  test_api_hardening.py  test_audit_hashchain.py  test_batch.py  test_benchmarks.py  test_business_samples.py  test_cbpr_readiness.py  test_cli.py  test_cli_reverse_formats.py  test_currency_validator.py  test_dedupe_and_stable_reversal.py  test_exceptions.py  test_generate_xml.py  test_init_and_gold_master.py  test_logging.py  test_main_entry.py  test_models.py  test_output_formats.py  test_parser.py  test_parser_resilience.py  test_partial_batch.py  test_path_validator.py  test_profiles.py  test_property_based.py  test_reason_codes.py  test_reversal.py  test_schema_validator.py  test_schema_version.py  test_serialize_statement.py  test_services.py  test_streaming_and_cache.py  test_swift_charset.py  test_telemetry.py  test_validate_statement.py  test_validate_via_xsd.py  test_validators.py  test_version.py  test_xml_guard.py
tests/gold_master/: business_sample_camt.052.001.04.xml  statement_ac04.xml
