[tool.poetry]
name = "camt053"
version = "0.0.5"
description = "Camt053 is a Python library for reading ISO 20022 camt Bank-to-Customer Statements (camt.053/052/054) and generating validated reversing entries by return reason code (e.g. AC04 Closed Account)."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/camt053"
homepage = "https://sebastienrousseau.github.io/camt053/"
packages = [
    { include = "camt053" },
]
include = [
    "camt053/schemas/*",
    "camt053/templates/*",
    "camt053/templates/**/*",
    "camt053/xsd/*",
    "camt053/py.typed",
]

[tool.poetry.scripts]
camt053 = "camt053.__main__:main"

[tool.poetry.dependencies]
click = "8.1.7"
colorama = "0.4.6"
defusedxml = "0.7.1"
jinja2 = "3.1.6"
markupsafe = "2.1.5"
pygments = ">=2.20.0,<3.0.0"
python = ">=3.10,<4.0"
rich = "15.0.0"
xmlschema = ">=3.4.0 <4.0.0"
cryptography = ">=48.0.1,<50.0.0"
jsonschema = ">=4.20,<4.25"
fastapi = ">=0.95"
uvicorn = {version = ">=0.20", extras = ["standard"]}
httpx = ">=0.23"
# Note: jsonschema is held at >=4.20 so the core library is co-installable with
# the camt053-mcp companion package (which requires the MCP SDK / jsonschema>=4.20).

# Optional: OpenTelemetry tracing + metrics. Off by default; install via
# ``pip install camt053[telemetry]``. The library gracefully degrades to
# a zero-overhead no-op when the API is absent.
opentelemetry-api = {version = ">=1.20", optional = true}

[tool.poetry.extras]
telemetry = ["opentelemetry-api"]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
pytest-benchmark = ">=5.0.0,<6.0.0"
pytest-xdist = ">=3.6.0,<4.0.0"
interrogate = "^1.7"
black = "^26.3.1"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.11.0"
pylint = ">=3,<5"
bandit = "^1.7.0"
ruff = "^0.1.0"
types-defusedxml = "^0.7.0"
types-setuptools = ">=65,<83"
hypothesis = "^6.0.0"
mutmut = "^3.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = ">=1,<3"
twine = "^6.2.0"
types-jsonschema = "^4.26.0.20260109"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
pydata-sphinx-theme = "^0.15.0"
sphinx-autodoc-typehints = ">=1,<3"
sphinx-design = "^0.6.0"
myst-parser = ">=2,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "camt053"
known_third_party = "xmlschema"
skip = ["tmp_env", ".venv", ".git", ".eggs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=camt053",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=100",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--disable-warnings",
    # Benchmarks (marker ``perf``) are excluded from the coverage gate; they
    # run on their own in the CI ``performance`` job (see #11). Select them
    # explicitly with ``-m perf --benchmark-only --no-cov``.
    "-m", "not perf"
]
markers = [
    "integration: end-to-end workflow tests",
    "message_compat: camt message family compatibility tests",
    "slow: tests taking > 1s",
    "security: XXE and injection prevention tests",
    "perf: performance/benchmark tests",
    "smoke: quick sanity checks"
]
timeout = 5

[tool.coverage.run]
branch = true
omit = ["camt053/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if sys.platform",
    "except Exception:",
    "except \\(RuntimeError, OSError\\)",
]

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1

# Mutation testing (#26). Advisory only -- this is *not* a blocking gate.
# mutmut mutates the package source and re-runs the suite to surface tests that
# pass even when the code is broken. Run with ``mutmut run`` (see CONTRIBUTING).
# Benchmarks are excluded from the test selection so each mutant is checked
# quickly; ``--no-cov`` avoids the 100% coverage gate aborting mutant runs.
[tool.mutmut]
source_paths = ["camt053"]
# mutmut's covered-lines pre-pass re-runs the suite under its own coverage and
# clashes with this project's ``--cov-fail-under=100`` gate; disable it so the
# advisory run starts cleanly. Mutants are still generated for the whole package.
mutate_only_covered_lines = false
# The two filesystem tests below ``monkeypatch.chdir`` into a temp directory,
# which trips mutmut 3.x's relative-``source_paths`` resolution during a mutant
# run; they are deselected from the mutation suite (they still run in the normal
# coverage-gated suite). Benchmarks (``perf``) are excluded for speed, and
# ``--no-cov`` keeps the 100% coverage gate from aborting each mutant run.
# ``pytest_add_cli_args`` is appended to *every* mutmut pytest invocation
# (including the per-mutant "clean test" runs that select only a subset of
# tests), so the coverage gate must be neutralised here -- ``-o addopts=``
# clears this project's ``--cov-fail-under=100`` default that would otherwise
# abort each partial run.
pytest_add_cli_args = ["-o", "addopts=", "-p", "no:cacheprovider"]
pytest_add_cli_args_test_selection = [
    "tests",
    "--deselect=tests/test_generate_xml.py",
    "--deselect=tests/test_path_validator.py",
    "-x",
    "-m",
    "not perf",
    "-q",
]
do_not_mutate = [
    "*/templates/*",
    "*/__main__.py",
]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = [".github/*.md", "*.md", "docs/**/*.md", "releases/**/*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "camt053/templates/",
    "setup.py",
    "scripts/",
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]

[[tool.mypy.overrides]]
module = "xmlschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# OpenTelemetry is an *optional* runtime dep (the ``camt053[telemetry]``
# extra). The telemetry module gracefully degrades to a no-op when the
# package is absent; mypy should not fail the gate just because the
# optional package isn't installed in the type-check environment.
module = "opentelemetry.*"
ignore_missing_imports = true
